@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2002-2015 "Neo Technology,"
+ * Copyright (c) 2002-2016 "Neo Technology,"
  * Network Engine for Objects in Lund AB [http://neotechnology.com]
  *
  * This file is part of Neo4j.
@@ -43,22 +43,28 @@ import java.rmi.server.RemoteObject;
 import java.rmi.server.UnicastRemoteObject;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Base64;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
-import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
+import java.util.function.Predicate;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
-import org.neo4j.function.Predicate;
 import org.neo4j.test.ProcessStreamHandler;
 
-@SuppressWarnings( "serial" )
+import static org.neo4j.io.proc.ProcessUtil.getClassPath;
+import static org.neo4j.io.proc.ProcessUtil.getClassPathList;
+import static org.neo4j.io.proc.ProcessUtil.getJavaExecutable;
+
 public abstract class SubProcess<T, P> implements Serializable
 {
+    private static final long serialVersionUID = -6084373832996850958L;
+
     private interface NoInterface
     {
         // Used when no interface is declared
@@ -67,7 +73,7 @@ public abstract class SubProcess<T, P> implements Serializable
     // by default will inherit output destinations for subprocess from current process
     private static final boolean INHERIT_OUTPUT_DEFAULT_VALUE = true;
 
-    private final Class<T> t;
+    private Class<T> t;
     private transient boolean inheritOutput = INHERIT_OUTPUT_DEFAULT_VALUE;
     private final transient Predicate<String> classPathFilter;
 
@@ -117,28 +123,13 @@ public abstract class SubProcess<T, P> implements Serializable
         this.classPathFilter = classPathFilter;
     }
 
-    public SubProcess( Predicate<String> classPathFilter )
-    {
-        this( classPathFilter, INHERIT_OUTPUT_DEFAULT_VALUE );
-    }
-
-    public SubProcess( boolean inheritOutput )
-    {
-        this(null, inheritOutput );
-    }
-
     public SubProcess()
     {
         this( null, INHERIT_OUTPUT_DEFAULT_VALUE );
     }
 
-    public T start( P parameter, BreakPoint... breakpoints )
+    public T start( P parameter )
     {
-        DebuggerConnector debugger = null;
-        if ( breakpoints != null && breakpoints.length != 0 )
-        {
-            debugger = new DebuggerConnector( breakpoints );
-        }
         DispatcherTrapImpl callback;
         try
         {
@@ -150,37 +141,19 @@ public abstract class SubProcess<T, P> implements Serializable
         }
         Process process;
         String pid;
-        DebugDispatch debugDispatch = null;
         Dispatcher dispatcher;
         try
         {
-            synchronized ( debugger != null ? DebuggerConnector.class : new Object() )
+            String java = getJavaExecutable().toString();
+            process = start( inheritOutput, java, "-ea", "-Xmx1G", "-Djava.awt.headless=true", "-cp", classPath(),
+                    SubProcess.class.getName(), serialize( callback ) );
+            pid = getPid( process );
+            // if IO was not inherited by current process we need to pipe error and input stream to corresponding
+            // target streams
+            if ( !inheritOutput )
             {
-                if ( debugger != null )
-                {
-                    process = start( inheritOutput, "java", "-ea", "-Xmx1G", debugger.listen(),
-                            "-Djava.awt.headless=true", "-cp",
-                            classPath( System.getProperty( "java.class.path" ) ), SubProcess.class.getName(),
-                            serialize( callback ) );
-                }
-                else
-                {
-                    process = start( inheritOutput, "java", "-ea", "-Xmx1G", "-Djava.awt.headless=true", "-cp",
-                            classPath( System.getProperty( "java.class.path" ) ),
-                            SubProcess.class.getName(), serialize( callback ) );
-                }
-                pid = getPid( process );
-                // if IO was not inherited by current process we need to pipe error and input stream to corresponding
-                // target streams
-                if (!inheritOutput )
-                {
-                    pipe( "[" + toString() + ":" + pid + "] ", process.getErrorStream(), errorStreamTarget() );
-                    pipe( "[" + toString() + ":" + pid + "] ", process.getInputStream(), inputStreamTarget() );
-                }
-                if ( debugger != null )
-                {
-                    debugDispatch = debugger.connect( toString() + ":" + pid );
-                }
+                pipe( "[" + toString() + ":" + pid + "] ", process.getErrorStream(), errorStreamTarget() );
+                pipe( "[" + toString() + ":" + pid + "] ", process.getInputStream(), inputStreamTarget() );
             }
             dispatcher = callback.get( process );
         }
@@ -199,12 +172,8 @@ public abstract class SubProcess<T, P> implements Serializable
         {
             throw new IllegalStateException( "failed to start sub process" );
         }
-        Handler handler = new Handler( t, dispatcher, process, "<" + toString() + ":" + pid + ">", debugDispatch );
-        if ( debugDispatch != null )
-        {
-            debugDispatch.handler = handler;
-        }
-        return t.cast( Proxy.newProxyInstance( t.getClassLoader(), new Class[] { t }, live( handler ) ) );
+        Handler handler = new Handler( t, dispatcher, process, "<" + toString() + ":" + pid + ">" );
+        return t.cast( Proxy.newProxyInstance( t.getClassLoader(), new Class[]{t}, live( handler ) ) );
     }
 
     protected PrintStream errorStreamTarget()
@@ -217,21 +186,14 @@ public abstract class SubProcess<T, P> implements Serializable
         return System.out;
     }
 
-    private String classPath( String parentClasspath )
+    private String classPath()
     {
         if ( classPathFilter == null )
         {
-            return parentClasspath;
+            return getClassPath();
         }
-        StringBuilder result = new StringBuilder();
-        for ( String part : parentClasspath.split( File.pathSeparator ) )
-        {
-            if ( classPathFilter.test( part ) )
-            {
-                result.append( result.length() > 0 ? File.pathSeparator : "" ).append( part );
-            }
-        }
-        return result.toString();
+        Stream<String> stream = getClassPathList().stream();
+        return stream.filter( classPathFilter ).collect( Collectors.joining( File.pathSeparator ) );
     }
 
     private static Process start(boolean inheritOutput, String... args )
@@ -253,281 +215,6 @@ public abstract class SubProcess<T, P> implements Serializable
         catch ( IOException e )
         {
             throw new RuntimeException( "Failed to start sub process", e );
-        }
-    }
-
-    @SuppressWarnings( "restriction" )
-    private static class DebuggerConnector
-    {
-        private static final com.sun.jdi.connect.ListeningConnector connector;
-        static
-        {
-            com.sun.jdi.connect.ListeningConnector first = null;
-            for ( com.sun.jdi.connect.ListeningConnector conn : com.sun.jdi.Bootstrap.virtualMachineManager().listeningConnectors() )
-            {
-                first = conn;
-                break;
-            }
-            connector = first;
-        }
-        private final Map<String, List<BreakPoint>> breakpoints = new HashMap<>();
-        private final Map<String, ? extends com.sun.jdi.connect.Connector.Argument> args;
-
-        DebuggerConnector( BreakPoint[] breakpoints )
-        {
-            this.args = connector.defaultArguments();
-            for ( BreakPoint breakpoint : breakpoints )
-            {
-                List<BreakPoint> list = this.breakpoints.get( breakpoint.type );
-                if ( list == null )
-                {
-                    this.breakpoints.put( breakpoint.type, list = new ArrayList<>() );
-                }
-                list.add( breakpoint );
-            }
-        }
-
-        String listen()
-        {
-            try
-            {
-                return String.format( "-agentlib:jdwp=transport=%s,address=%s", connector.transport().name(),
-                        connector.startListening( args ) );
-            }
-            catch ( Exception e )
-            {
-                throw new UnsupportedOperationException( "Debugger not supported", e );
-            }
-        }
-
-        DebugDispatch connect( String string )
-        {
-            final com.sun.jdi.VirtualMachine vm;
-            try
-            {
-                vm = connector.accept( args );
-                connector.stopListening( args );
-            }
-            catch ( Exception e )
-            {
-                throw new RuntimeException( "Debugger connection failure", e );
-            }
-            com.sun.jdi.request.EventRequestManager erm = vm.eventRequestManager();
-            TYPES: for ( Map.Entry<String, List<BreakPoint>> entry : breakpoints.entrySet() )
-            {
-                for ( com.sun.jdi.ReferenceType type : vm.classesByName( entry.getKey() ) )
-                {
-                    if ( type.name().equals( entry.getKey() ) )
-                    {
-                        for ( BreakPoint breakpoint : entry.getValue() )
-                        {
-                            breakpoint.setup( type );
-                        }
-                        continue TYPES;
-                    }
-                }
-                com.sun.jdi.request.ClassPrepareRequest prepare = erm.createClassPrepareRequest();
-                prepare.addClassFilter( entry.getKey() );
-                prepare.enable();
-            }
-            if ( vm.canRequestMonitorEvents() )
-            {
-                erm.createMonitorContendedEnterRequest().enable();
-            }
-            DebugDispatch dispatch = new DebugDispatch( vm.eventQueue(), breakpoints );
-            new Thread( dispatch, "Debugger: [" + string + "]" ).start();
-            return dispatch;
-        }
-    }
-
-    @SuppressWarnings( "restriction" )
-    static class DebugDispatch implements Runnable
-    {
-        static DebugDispatch get( Object o )
-        {
-            if ( Proxy.isProxyClass( o.getClass() ) )
-            {
-                InvocationHandler handler = Proxy.getInvocationHandler( o );
-                if ( handler instanceof Handler )
-                {
-                    return ( (Handler) handler ).debugDispatch;
-                }
-            }
-            throw new IllegalArgumentException( "Not a sub process: " + o );
-        }
-
-        volatile Handler handler;
-        private final com.sun.jdi.event.EventQueue queue;
-        private final Map<String, List<BreakPoint>> breakpoints;
-        private final Map<com.sun.jdi.ThreadReference, DebuggerDeadlockCallback> suspended = new HashMap<>();
-        static final DebuggerDeadlockCallback defaultCallback = new DebuggerDeadlockCallback()
-        {
-            @Override
-            public void deadlock( DebuggedThread thread )
-            {
-                throw new DeadlockDetectedError();
-            }
-        };
-
-        DebugDispatch( com.sun.jdi.event.EventQueue queue, Map<String, List<BreakPoint>> breakpoints )
-        {
-            this.queue = queue;
-            this.breakpoints = breakpoints;
-        }
-
-        @Override
-        public void run()
-        {
-            for ( ;; )
-            {
-                final com.sun.jdi.event.EventSet events;
-                try
-                {
-                    events = queue.remove();
-                }
-                catch ( InterruptedException e )
-                {
-                    return;
-                }
-                Integer exitCode = null;
-                try
-                {
-                    for ( com.sun.jdi.event.Event event : events )
-                    {
-                        if ( event instanceof com.sun.jdi.event.MonitorContendedEnterEvent )
-                        {
-                            com.sun.jdi.event.MonitorContendedEnterEvent monitor = (com.sun.jdi.event.MonitorContendedEnterEvent) event;
-                            final com.sun.jdi.ThreadReference thread;
-                            try
-                            {
-                                thread = monitor.monitor().owningThread();
-                            }
-                            catch ( com.sun.jdi.IncompatibleThreadStateException e )
-                            {
-                                e.printStackTrace();
-                                continue;
-                            }
-                            if ( thread != null && thread.isSuspended() )
-                            {
-                                DebuggerDeadlockCallback callback = suspended.get( thread );
-                                try
-                                {
-                                    if ( callback != null )
-                                    {
-                                        callback.deadlock( new DebuggedThread( this, thread ) );
-                                    }
-                                }
-                                catch ( DeadlockDetectedError deadlock )
-                                {
-                                    @SuppressWarnings( "hiding" ) Handler handler = this.handler;
-                                    if ( handler != null )
-                                    {
-                                        handler.kill( false );
-                                    }
-                                }
-                            }
-                        }
-                        else if ( event instanceof com.sun.jdi.event.LocatableEvent )
-                        {
-                            callback( (com.sun.jdi.event.LocatableEvent) event );
-                        }
-                        else if ( event instanceof com.sun.jdi.event.ClassPrepareEvent )
-                        {
-                            setup( ( (com.sun.jdi.event.ClassPrepareEvent) event ).referenceType() );
-                        }
-                        else if ( event instanceof com.sun.jdi.event.VMDisconnectEvent
-                                  || event instanceof com.sun.jdi.event.VMDeathEvent )
-                        {
-                            return;
-                        }
-                    }
-                }
-                catch ( KillSubProcess kill )
-                {
-                    exitCode = kill.exitCode;
-                }
-                finally
-                {
-                    if ( exitCode != null )
-                    {
-                        events.virtualMachine().exit( exitCode );
-                    }
-                    else
-                    {
-                        events.resume();
-                    }
-                }
-            }
-        }
-
-        private void setup( com.sun.jdi.ReferenceType type )
-        {
-            List<BreakPoint> list = breakpoints.get( type.name() );
-            if ( list == null )
-            {
-                return;
-            }
-            for ( BreakPoint breakpoint : list )
-            {
-                breakpoint.setup( type );
-            }
-        }
-
-        private void callback( com.sun.jdi.event.LocatableEvent event ) throws KillSubProcess
-        {
-            List<BreakPoint> list = breakpoints.get( event.location().declaringType().name() );
-            if ( list == null )
-            {
-                return;
-            }
-            com.sun.jdi.Method method = event.location().method();
-            for ( BreakPoint breakpoint : list )
-            {
-                if ( breakpoint.matches( method.name(), method.argumentTypeNames() ) )
-                {
-                    if ( breakpoint.enabled )
-                    {
-                        breakpoint.invoke( new DebugInterface( this, event ) );
-                    }
-                }
-            }
-        }
-
-        void suspended( com.sun.jdi.ThreadReference thread, DebuggerDeadlockCallback callback )
-        {
-            if ( callback == null )
-            {
-                callback = defaultCallback;
-            }
-            suspended.put( thread, callback );
-        }
-
-        void resume( com.sun.jdi.ThreadReference thread )
-        {
-            suspended.remove( thread );
-        }
-
-        DebuggedThread[] suspendedThreads()
-        {
-            if ( suspended.isEmpty() )
-            {
-                return new DebuggedThread[0];
-            }
-            List<DebuggedThread> threads = new ArrayList<>();
-            for ( com.sun.jdi.ThreadReference thread : suspended.keySet() )
-            {
-                threads.add( new DebuggedThread( this, thread ) );
-            }
-            return threads.toArray( new DebuggedThread[threads.size()] );
-        }
-    }
-
-    static class DeadlockDetectedError extends Error
-    {
-        @Override
-        public Throwable fillInStackTrace()
-        {
-            return this;
         }
     }
 
@@ -776,9 +463,9 @@ public abstract class SubProcess<T, P> implements Serializable
 
     private static class DispatcherTrapImpl extends UnicastRemoteObject implements DispatcherTrap
     {
-        private final Object parameter;
+        private Object parameter;
         private volatile Dispatcher dispatcher;
-        private final SubProcess<?, ?> process;
+        private SubProcess<?, ?> process;
 
         DispatcherTrapImpl( SubProcess<?, ?> process, Object parameter ) throws RemoteException
         {
@@ -845,28 +532,21 @@ public abstract class SubProcess<T, P> implements Serializable
         {
             throw new RuntimeException( "Broken implementation!", e );
         }
-        return new sun.misc.BASE64Encoder().encode( os.toByteArray() );
+        return Base64.getEncoder().encodeToString( os.toByteArray() );
     }
 
     @SuppressWarnings( "restriction" )
-    private static DispatcherTrap deserialize( String data )
+    private static DispatcherTrap deserialize( String data ) throws Exception
     {
-        try
-        {
-            return (DispatcherTrap) new ObjectInputStream( new ByteArrayInputStream(
-                    new sun.misc.BASE64Decoder().decodeBuffer( data ) ) ).readObject();
-        }
-        catch ( Exception e )
-        {
-            return null;
-        }
+        return (DispatcherTrap) new ObjectInputStream( new ByteArrayInputStream(
+                Base64.getDecoder().decode( data ) ) ).readObject();
     }
 
     private interface Dispatcher extends Remote
     {
         void stop() throws RemoteException;
 
-        Object dispatch( String name, String[] types, Object[] args ) throws RemoteException, Throwable;
+        Object dispatch( String name, String[] types, Object[] args ) throws Throwable;
     }
 
     private static InvocationHandler live( Handler handler )
@@ -946,15 +626,13 @@ public abstract class SubProcess<T, P> implements Serializable
         private final Process process;
         private final Class<?> type;
         private final String repr;
-        private final DebugDispatch debugDispatch;
 
-        Handler( Class<?> type, Dispatcher dispatcher, Process process, String repr, DebugDispatch debugDispatch )
+        Handler( Class<?> type, Dispatcher dispatcher, Process process, String repr )
         {
             this.type = type;
             this.dispatcher = dispatcher;
             this.process = process;
             this.repr = repr;
-            this.debugDispatch = debugDispatch;
         }
 
         @Override
@@ -1061,7 +739,7 @@ public abstract class SubProcess<T, P> implements Serializable
 
     private static class DispatcherImpl extends UnicastRemoteObject implements Dispatcher
     {
-        private transient final SubProcess<?, ?> subprocess;
+        private final transient SubProcess<?, ?> subprocess;
 
         protected DispatcherImpl( SubProcess<?, ?> subprocess ) throws RemoteException
         {
