@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2002-2015 "Neo Technology,"
+ * Copyright (c) 2002-2016 "Neo Technology,"
  * Network Engine for Objects in Lund AB [http://neotechnology.com]
  *
  * This file is part of Neo4j.
@@ -25,11 +25,12 @@ import java.io.ObjectOutputStream;
 import java.io.Serializable;
 import java.net.URI;
 import java.util.ArrayList;
+import java.util.Base64;
 import java.util.Map;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
-
-import sun.misc.BASE64Encoder;
+import java.util.function.BiFunction;
+import java.util.function.Predicate;
 
 import org.neo4j.cluster.InstanceId;
 import org.neo4j.cluster.member.ClusterMemberEvents;
@@ -47,8 +48,6 @@ import org.neo4j.cluster.protocol.heartbeat.Heartbeat;
 import org.neo4j.cluster.protocol.heartbeat.HeartbeatListener;
 import org.neo4j.cluster.protocol.snapshot.Snapshot;
 import org.neo4j.cluster.protocol.snapshot.SnapshotProvider;
-import org.neo4j.function.Predicate;
-import org.neo4j.helpers.Function2;
 import org.neo4j.helpers.Listeners;
 import org.neo4j.helpers.NamedThreadFactory;
 import org.neo4j.helpers.collection.Iterables;
@@ -56,10 +55,9 @@ import org.neo4j.kernel.lifecycle.Lifecycle;
 import org.neo4j.logging.Log;
 import org.neo4j.logging.LogProvider;
 
-import static org.neo4j.helpers.Predicates.in;
-import static org.neo4j.helpers.Predicates.not;
+import static org.neo4j.function.Predicates.in;
+import static org.neo4j.helpers.collection.Iterables.asList;
 import static org.neo4j.helpers.collection.Iterables.filter;
-import static org.neo4j.helpers.collection.Iterables.toList;
 
 /**
  * Paxos based implementation of {@link org.neo4j.cluster.member.ClusterMemberEvents}
@@ -86,7 +84,7 @@ public class PaxosClusterMemberEvents implements ClusterMemberEvents, Lifecycle
     public PaxosClusterMemberEvents( final Snapshot snapshot, Cluster cluster, Heartbeat heartbeat,
                                     AtomicBroadcast atomicBroadcast, LogProvider logProvider,
                                     Predicate<ClusterMembersSnapshot> validator,
-                                    Function2<Iterable<MemberIsAvailable>, MemberIsAvailable,
+                                    BiFunction<Iterable<MemberIsAvailable>, MemberIsAvailable,
                                     Iterable<MemberIsAvailable>> snapshotFilter,
                                     ObjectInputStreamFactory lenientObjectInputStream,
                                     ObjectOutputStreamFactory lenientObjectOutputStream,
@@ -185,14 +183,7 @@ public class PaxosClusterMemberEvents implements ClusterMemberEvents, Lifecycle
 
             if ( !snapshotValidator.test( clusterMembersSnapshot ) )
             {
-                executor.submit( new Runnable()
-                {
-                    @Override
-                    public void run()
-                    {
-                        cluster.leave();
-                    }
-                } );
+                executor.submit( (Runnable) () -> cluster.leave() );
             }
             else
             {
@@ -214,19 +205,14 @@ public class PaxosClusterMemberEvents implements ClusterMemberEvents, Lifecycle
     }
 
     public static class UniqueRoleFilter
-            implements Function2<Iterable<MemberIsAvailable>, MemberIsAvailable, Iterable<MemberIsAvailable>>
+            implements BiFunction<Iterable<MemberIsAvailable>,MemberIsAvailable,Iterable<MemberIsAvailable>>
     {
         @Override
         public Iterable<MemberIsAvailable> apply( final Iterable<MemberIsAvailable> previousSnapshot,
                                                   final MemberIsAvailable newMessage )
         {
-            return Iterables.append( newMessage, Iterables.filter( new Predicate<MemberIsAvailable>()
-            {
-                @Override
-                public boolean test( MemberIsAvailable item )
-                {
-                    return not( in( newMessage.getInstanceId() ) ).accept( item.getInstanceId() );
-                }
+            return Iterables.append( newMessage, Iterables.filter( item -> {
+                return in( newMessage.getInstanceId() ).negate().test( item.getInstanceId() );
             }, previousSnapshot ) );
         }
     }
@@ -234,12 +220,13 @@ public class PaxosClusterMemberEvents implements ClusterMemberEvents, Lifecycle
     public static class ClusterMembersSnapshot
             implements Serializable
     {
-        private final
-        Function2<Iterable<MemberIsAvailable>, MemberIsAvailable, Iterable<MemberIsAvailable>> nextSnapshotFunction;
+        private static final long serialVersionUID = -4638991834604077187L;
+
+        private BiFunction<Iterable<MemberIsAvailable>, MemberIsAvailable, Iterable<MemberIsAvailable>> nextSnapshotFunction;
 
         private Iterable<MemberIsAvailable> availableMembers = new ArrayList<>();
 
-        public ClusterMembersSnapshot( Function2<Iterable<MemberIsAvailable>, MemberIsAvailable,
+        public ClusterMembersSnapshot( BiFunction<Iterable<MemberIsAvailable>, MemberIsAvailable,
                 Iterable<MemberIsAvailable>> nextSnapshotFunction )
         {
             this.nextSnapshotFunction = nextSnapshotFunction;
@@ -247,33 +234,21 @@ public class PaxosClusterMemberEvents implements ClusterMemberEvents, Lifecycle
 
         public void availableMember( MemberIsAvailable memberIsAvailable )
         {
-            availableMembers = toList( nextSnapshotFunction.apply( availableMembers, memberIsAvailable ) );
+            availableMembers = asList( nextSnapshotFunction.apply( availableMembers, memberIsAvailable ) );
         }
 
         public void unavailableMember( final InstanceId member )
         {
-            availableMembers = toList( filter( new Predicate<MemberIsAvailable>()
-            {
-                @Override
-                public boolean test( MemberIsAvailable item )
-                {
-                    return !item.getInstanceId().equals( member );
-                }
-            }, availableMembers ) );
+            availableMembers = asList( filter( item -> !item.getInstanceId().equals( member ), availableMembers ) );
         }
 
         public void unavailableMember( final URI member, final InstanceId id, final String role )
         {
-            availableMembers = toList( filter( new Predicate<MemberIsAvailable>()
-            {
-                @Override
-                public boolean test( MemberIsAvailable item )
-                {
-                    boolean matchByUriOrId = item.getClusterUri().equals( member ) || item.getInstanceId().equals( id );
-                    boolean matchByRole = item.getRole().equals( role );
+            availableMembers = asList( filter( item -> {
+                boolean matchByUriOrId = item.getClusterUri().equals( member ) || item.getInstanceId().equals( id );
+                boolean matchByRole = item.getRole().equals( role );
 
-                    return !(matchByUriOrId && matchByRole);
-                }
+                return !(matchByUriOrId && matchByRole);
             }, availableMembers ) );
         }
 
@@ -284,13 +259,8 @@ public class PaxosClusterMemberEvents implements ClusterMemberEvents, Lifecycle
 
         public Iterable<MemberIsAvailable> getCurrentAvailable( final InstanceId memberId )
         {
-            return toList( Iterables.filter( new Predicate<MemberIsAvailable>()
-            {
-                @Override
-                public boolean test( MemberIsAvailable item )
-                {
-                    return item.getInstanceId().equals( memberId );
-                }
+            return asList( Iterables.filter( item -> {
+                return item.getInstanceId().equals( memberId );
             }, availableMembers ) );
         }
 
@@ -315,14 +285,7 @@ public class PaxosClusterMemberEvents implements ClusterMemberEvents, Lifecycle
             if ( role.equals( ClusterConfiguration.COORDINATOR ) )
             {
                 // Use the cluster coordinator as master for HA
-                Listeners.notifyListeners( listeners, new Listeners.Notification<ClusterMemberListener>()
-                {
-                    @Override
-                    public void notify( ClusterMemberListener listener )
-                    {
-                        listener.coordinatorIsElected( instanceId );
-                    }
-                } );
+                Listeners.notifyListeners( listeners, listener -> listener.coordinatorIsElected( instanceId ) );
             }
         }
 
@@ -330,16 +293,10 @@ public class PaxosClusterMemberEvents implements ClusterMemberEvents, Lifecycle
         public void leftCluster( final InstanceId instanceId, URI member )
         {
             // Notify unavailability of members
-            Listeners.notifyListeners( listeners, new Listeners.Notification<ClusterMemberListener>()
-            {
-                @Override
-                public void notify( ClusterMemberListener listener )
+            Listeners.notifyListeners( listeners, listener -> {
+                for ( MemberIsAvailable memberIsAvailable : clusterMembersSnapshot.getCurrentAvailable( instanceId ) )
                 {
-                    for ( MemberIsAvailable memberIsAvailable : clusterMembersSnapshot.getCurrentAvailable(
-                            instanceId ) )
-                    {
-                        listener.memberIsUnavailable( memberIsAvailable.getRole(), instanceId );
-                    }
+                    listener.memberIsUnavailable( memberIsAvailable.getRole(), instanceId );
                 }
             } );
 
@@ -364,15 +321,11 @@ public class PaxosClusterMemberEvents implements ClusterMemberEvents, Lifecycle
 
                     log.info( "Snapshot:" + clusterMembersSnapshot.getCurrentAvailableMembers() );
 
-                    Listeners.notifyListeners( listeners, new Listeners.Notification<ClusterMemberListener>()
-                    {
-                        @Override
-                        public void notify( ClusterMemberListener listener )
-                        {
-                            listener.memberIsAvailable( memberIsAvailable.getRole(), memberIsAvailable.getInstanceId(),
-                                    memberIsAvailable.getRoleUri(), memberIsAvailable.getStoreId() );
-                        }
-                    } );
+                    Listeners.notifyListeners( listeners,
+                            listener ->
+                                    listener.memberIsAvailable( memberIsAvailable.getRole(),
+                                            memberIsAvailable.getInstanceId(),
+                                    memberIsAvailable.getRoleUri(), memberIsAvailable.getStoreId() ) );
                 }
                 else if ( value instanceof MemberIsUnavailable )
                 {
@@ -384,22 +337,15 @@ public class PaxosClusterMemberEvents implements ClusterMemberEvents, Lifecycle
                             memberIsUnavailable.getInstanceId(),
                             memberIsUnavailable.getRole() );
 
-                    Listeners.notifyListeners( listeners, new Listeners.Notification<ClusterMemberListener>()
-                    {
-                        @Override
-                        public void notify( ClusterMemberListener listener )
-                        {
-                            listener.memberIsUnavailable( memberIsUnavailable.getRole(),
-                                    memberIsUnavailable.getInstanceId() );
-                        }
-                    } );
+                    Listeners.notifyListeners( listeners,
+                            listener -> listener.memberIsUnavailable( memberIsUnavailable.getRole(),
+                            memberIsUnavailable.getInstanceId() ) );
                 }
             }
             catch ( Throwable t )
             {
-
                 log.error( String.format( "Could not handle cluster member available message: %s (%d)",
-                        new BASE64Encoder().encode( payload.getBuf() ), payload.getLen() ), t );
+                        Base64.getEncoder().encodeToString( payload.getBuf() ), payload.getLen() ), t );
             }
         }
     }
@@ -409,27 +355,13 @@ public class PaxosClusterMemberEvents implements ClusterMemberEvents, Lifecycle
         @Override
         public void failed( final InstanceId server )
         {
-            Listeners.notifyListeners( listeners, new Listeners.Notification<ClusterMemberListener>()
-            {
-                @Override
-                public void notify( ClusterMemberListener listener )
-                {
-                    listener.memberIsFailed( server );
-                }
-            } );
+            Listeners.notifyListeners( listeners, listener -> listener.memberIsFailed( server ) );
         }
 
         @Override
         public void alive( final InstanceId server )
         {
-            Listeners.notifyListeners( listeners, new Listeners.Notification<ClusterMemberListener>()
-            {
-                @Override
-                public void notify( ClusterMemberListener listener )
-                {
-                    listener.memberIsAlive( server );
-                }
-            } );
+            Listeners.notifyListeners( listeners, listener -> listener.memberIsAlive( server ) );
         }
     }
 }
